--- a/SacramentPlannerMVC/Views/Shared/_Layout.cshtml
+++ b/SacramentPlannerMVC/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SacramentPlannerMVC</title>
+    <title>@ViewData["Title"] - Sacrament Meeting Planner</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SacramentPlannerMVC</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Sacrament Meeting Planner</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Meetings" asp-action="Index">Meetings</a></li>
+                    <li><a asp-area="" asp-controller="Bishopric" asp-action="Index">Bishopric</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +43,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - SacramentPlannerMVC</p>
+            <p>&copy; 2018 - Sacrament Meeting Planner</p>
         </footer>
     </div>
 
