--- a/SacramentPlannerMVC/Views/Shared/_Layout.cshtml
+++ b/SacramentPlannerMVC/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Meetings" asp-action="Index">Meetings</a></li>
-                    <li><a asp-area="" asp-controller="Bishoprics" asp-action="Index">Bishopric</a></li>
+                    <li><a asp-area="" asp-controller="Bishopric" asp-action="Index">Bishopric</a></li>
                 </ul>
             </div>
         </div>
