--- a/SacramentPlannerMVC/Views/Meetings/Delete.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Delete.cshtml
@@ -53,6 +53,12 @@
         <dd>
             @Html.DisplayFor(model => model.ClosingPrayer)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Conductor)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Conductor.Discriminator)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
