--- a/SacramentPlannerMVC/Views/Meetings/Details.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Details.cshtml
@@ -52,6 +52,12 @@
         <dd>
             @Html.DisplayFor(model => model.ClosingPrayer)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Conductor)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Conductor.Discriminator)
+        </dd>
     </dl>
 </div>
 <div>
