--- a/SacramentPlannerMVC/Views/Meetings/Edit.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Edit.cshtml
@@ -49,6 +49,11 @@
                 <span asp-validation-for="ClosingPrayer" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="BishopricID" class="control-label"></label>
+                <select asp-for="BishopricID" class="form-control" asp-items="ViewBag.BishopricID"></select>
+                <span asp-validation-for="BishopricID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
