--- a/SacramentPlannerMVC/Views/Meetings/Index.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Index.cshtml
@@ -33,6 +33,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.ClosingPrayer)
                 </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Conductor)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -59,6 +62,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ClosingPrayer)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Conductor)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
