--- a/SacramentPlannerMVC/Views/Meetings/Create.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Create.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Conductor" class="control-label"></label>
+                <label asp-for="BishopricID" class="control-label"></label>
                 <select asp-for="BishopricID" class="form-control" asp-items="ViewBag.BishopricID">
                     <option value="">-- Select Conductor --</option>
                 </select>
