Edit, Details, Delete is now working

--- a/SacramentPlannerMVC/Views/Meetings/Delete.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Delete.cshtml
@@ -57,7 +57,7 @@
             @Html.DisplayNameFor(model => model.Conductor)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Conductor.Discriminator)
+            @Html.DisplayFor(model => model.Conductor.FullName)
         </dd>
     </dl>
     
