--- a/SacramentPlannerMVC/Views/Meetings/Edit.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Edit.cshtml
@@ -19,26 +19,6 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OpeningHymn" class="control-label"></label>
-                <input asp-for="OpeningHymn" class="form-control" />
-                <span asp-validation-for="OpeningHymn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SacramentHymn" class="control-label"></label>
-                <input asp-for="SacramentHymn" class="form-control" />
-                <span asp-validation-for="SacramentHymn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IntermediateHymn" class="control-label"></label>
-                <input asp-for="IntermediateHymn" class="form-control" />
-                <span asp-validation-for="IntermediateHymn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ClosingHymn" class="control-label"></label>
-                <input asp-for="ClosingHymn" class="form-control" />
-                <span asp-validation-for="ClosingHymn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="OpeningPrayer" class="control-label"></label>
                 <input asp-for="OpeningPrayer" class="form-control" />
                 <span asp-validation-for="OpeningPrayer" class="text-danger"></span>
@@ -52,6 +32,11 @@
                 <label asp-for="BishopricID" class="control-label"></label>
                 <select asp-for="BishopricID" class="form-control" asp-items="ViewBag.BishopricID"></select>
                 <span asp-validation-for="BishopricID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="HymnID" class="control-label"></label>
+                <select asp-for="HymnID" class="form-control" asp-items="ViewBag.HymnID"></select>
+                <span asp-validation-for="HymnID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
