--- a/SacramentPlannerMVC/Views/Meetings/Create.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Create.cshtml
@@ -29,11 +29,23 @@
             </div>
             <div class="form-group">
                 <label asp-for="BishopricID" class="control-label"></label>
-                <select asp-for="BishopricID" class ="form-control" asp-items="ViewBag.BishopricID"></select>
+                <select asp-for="BishopricID" class="form-control" asp-items="ViewBag.BishopricID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="HymnID" class="control-label"></label>
-                <select asp-for="HymnID" class ="form-control" asp-items="ViewBag.HymnID"></select>
+                <label asp-for="OpeningHymnID" class="control-label"></label>
+                <select asp-for="OpeningHymnID" class="form-control" asp-items="ViewBag.OpeningHymnID"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="SacramentHymnID" class="control-label"></label>
+                <select asp-for="SacramentHymnID" class="form-control" asp-items="ViewBag.SacramentHymnID"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="IntermediateHymnID" class="control-label"></label>
+                <select asp-for="IntermediateHymnID" class="form-control" asp-items="ViewBag.IntermediateHymnID"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="ClosingHymnID" class="control-label"></label>
+                <select asp-for="ClosingHymnID" class="form-control" asp-items="ViewBag.ClosingHymnID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
