--- a/SacramentPlannerMVC/Views/Meetings/Create.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Create.cshtml
@@ -31,10 +31,15 @@
                 <label asp-for="BishopricID" class="control-label"></label>
                 <select asp-for="BishopricID" class="form-control" asp-items="ViewBag.BishopricID"></select>
             </div>
+
             <div class="form-group">
                 <label asp-for="OpeningHymnID" class="control-label"></label>
-                <select asp-for="OpeningHymnID" class="form-control" asp-items="ViewBag.OpeningHymnID"></select>
+                <select asp-for="OpeningHymnID" class="form-control" asp-items="ViewBag.OpeningHymnID">
+                    <option value="">--- Select an Opening Hymn --</option>
+                </select>
+                <span asp-validation-for="OpeningHymnID" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="SacramentHymnID" class="control-label"></label>
                 <select asp-for="SacramentHymnID" class="form-control" asp-items="ViewBag.SacramentHymnID"></select>
