--- a/SacramentPlannerMVC/Views/Meetings/Delete.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Delete.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Conductor)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Conductor.Discriminator)
+            @Html.DisplayFor(model => model.Conductor.FullName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Hymn)
