Updating some meeting views

--- a/SacramentPlannerMVC/Views/Meetings/Details.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Details.cshtml
@@ -38,19 +38,19 @@
             @Html.DisplayNameFor(model => model.OpeningHymnID)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Hymn.HymnLabel)
+            @Html.DisplayFor(model => model.OpeningHymnID)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.SacramentHymnID)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Hymn.HymnLabel)
+            @Html.DisplayFor(model => model.SacramentHymnID)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.IntermediateHymnID)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Hymn.HymnLabel)
+            @Html.DisplayFor(model => model.IntermediateHymnID)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ClosingHymnID)
