--- a/SacramentPlannerMVC/Views/Meetings/Create.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Create.cshtml
@@ -68,6 +68,9 @@
                 <span asp-validation-for="ClosingHymnID" class="text-danger"></span>
             </div>
 
+            <div id="add_speaker"></div>
+            <button type="button" id="mybutton" onclick="Add_Speaker()" >Add Speaker</button><br>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
