--- a/SacramentPlannerMVC/Views/Meetings/Index.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Index.cshtml
@@ -35,7 +35,7 @@
                     @Html.DisplayFor(modelItem => item.Date)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Conductor.FullName)
+                    @Html.DisplayFor(modelItem => item.Conductor.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.OpeningPrayer)
@@ -44,9 +44,9 @@
                     @Html.DisplayFor(modelItem => item.ClosingPrayer)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.MeetingId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.MeetingId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MeetingId">Delete</a>
                 </td>
             </tr>
         }
