--- a/SacramentPlannerMVC/Views/Meetings/Details.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Details.cshtml
@@ -29,34 +29,34 @@
             @Html.DisplayFor(model => model.ClosingPrayer)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ClosingHymnNav)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ClosingHymnNav.HymnId)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Conductor)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Conductor.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.OpeningHymnID)
+            @Html.DisplayNameFor(model => model.IntermediateHymnNav)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.OpeningHymnID)
+            @Html.DisplayFor(model => model.IntermediateHymnNav.HymnId)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.SacramentHymnID)
+            @Html.DisplayNameFor(model => model.OpeningHymnNav)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.SacramentHymnID)
+            @Html.DisplayFor(model => model.OpeningHymnNav.HymnId)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.IntermediateHymnID)
+            @Html.DisplayNameFor(model => model.SacramentHymnNav)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IntermediateHymnID)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ClosingHymnID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ClosingHymnID)
+            @Html.DisplayFor(model => model.SacramentHymnNav.HymnId)
         </dd>
     </dl>
 </div>
