--- a/SacramentPlannerMVC/Views/Meetings/Edit.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Edit.cshtml
@@ -12,6 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="MeetingId" />
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
                 <input asp-for="Date" class="form-control" />
@@ -27,47 +28,31 @@
                 <input asp-for="ClosingPrayer" class="form-control" />
                 <span asp-validation-for="ClosingPrayer" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="BishopricID" class="control-label"></label>
-                <select asp-for="BishopricID" class="form-control" asp-items="ViewBag.BishopricID">
-                    <option value="">--- Select a Conductor --</option>
-                </select>
+                <select asp-for="BishopricID" class="form-control" asp-items="ViewBag.BishopricID"></select>
                 <span asp-validation-for="BishopricID" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="OpeningHymnID" class="control-label"></label>
-                <select asp-for="OpeningHymnID" class="form-control" asp-items="ViewBag.OpeningHymnID">
-                    <option value="">--- Select an Opening Hymn --</option>
-                </select>
+                <select asp-for="OpeningHymnID" class="form-control" asp-items="ViewBag.OpeningHymnID"></select>
                 <span asp-validation-for="OpeningHymnID" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="SacramentHymnID" class="control-label"></label>
-                <select asp-for="SacramentHymnID" class="form-control" asp-items="ViewBag.SacramentHymnID">
-                    <option value="">--- Select a Sacrament Hymn --</option>
-                </select>
+                <select asp-for="SacramentHymnID" class="form-control" asp-items="ViewBag.SacramentHymnID"></select>
                 <span asp-validation-for="SacramentHymnID" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="IntermediateHymnID" class="control-label"></label>
-                <select asp-for="IntermediateHymnID" class="form-control" asp-items="ViewBag.IntermediateHymnID">
-                    <option value="">--- Select an Intermediate Hymn --</option>
-                </select>
+                <select asp-for="IntermediateHymnID" class="form-control" asp-items="ViewBag.IntermediateHymnID"></select>
                 <span asp-validation-for="IntermediateHymnID" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="ClosingHymnID" class="control-label"></label>
-                <select asp-for="ClosingHymnID" class="form-control" asp-items="ViewBag.ClosingHymnID">
-                    <option value="">--- Select a Closing Hymn --</option>
-                </select>
+                <select asp-for="ClosingHymnID" class="form-control" asp-items="ViewBag.ClosingHymnID"></select>
                 <span asp-validation-for="ClosingHymnID" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
