Figuring out why it won't initialize database

--- a/SacramentPlannerMVC/Views/Meetings/Index.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Index.cshtml
@@ -52,19 +52,19 @@
                 @Html.DisplayFor(modelItem => item.ClosingPrayer)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ClosingHymnNav.HymnId)
+                @Html.DisplayFor(modelItem => item.ClosingHymnNav.ID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Conductor.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IntermediateHymnNav.HymnId)
+                @Html.DisplayFor(modelItem => item.IntermediateHymnNav.ID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OpeningHymnNav.HymnId)
+                @Html.DisplayFor(modelItem => item.OpeningHymnNav.ID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SacramentHymnNav.HymnId)
+                @Html.DisplayFor(modelItem => item.SacramentHymnNav.ID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.MeetingId">Edit</a> |
