Details page now loads

--- a/SacramentPlannerMVC/Views/Meetings/Details.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Details.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.ClosingHymnNav)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ClosingHymnNav.HymnId)
+            @Html.DisplayFor(model => model.ClosingHymnNav.HymnLabel)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Conductor)
@@ -44,19 +44,19 @@
             @Html.DisplayNameFor(model => model.IntermediateHymnNav)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IntermediateHymnNav.HymnId)
+            @Html.DisplayFor(model => model.IntermediateHymnNav.HymnLabel)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.OpeningHymnNav)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.OpeningHymnNav.HymnId)
+            @Html.DisplayFor(model => model.OpeningHymnNav.HymnLabel)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.SacramentHymnNav)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.SacramentHymnNav.HymnId)
+            @Html.DisplayFor(model => model.SacramentHymnNav.HymnLabel)
         </dd>
     </dl>
 </div>
