Hymns are proper now

--- a/SacramentPlannerMVC/Views/Meetings/Index.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Index.cshtml
@@ -12,66 +12,43 @@
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Date)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.OpeningPrayer)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ClosingPrayer)
-                </th>
             <th>
-                @Html.DisplayNameFor(model => model.ClosingHymnNav)
+                @Html.DisplayNameFor(model => model.Date)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Conductor)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IntermediateHymnNav)
+                @Html.DisplayNameFor(model => model.OpeningPrayer)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OpeningHymnNav)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SacramentHymnNav)
+                @Html.DisplayNameFor(model => model.ClosingPrayer)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OpeningPrayer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ClosingPrayer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ClosingHymnNav.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Conductor.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IntermediateHymnNav.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OpeningHymnNav.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SacramentHymnNav.ID)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MeetingId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MeetingId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MeetingId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Conductor.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OpeningPrayer)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ClosingPrayer)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.MeetingId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.MeetingId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MeetingId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
