--- a/SacramentPlannerMVC/wwwroot/css/site.css
+++ b/SacramentPlannerMVC/wwwroot/css/site.css
@@ -33,3 +33,16 @@
         display: none;
     }
 }
+
+.loader {
+    position: absolute;
+    z-index: 1000;
+    left: 40%;
+    display: none;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite
+}
