--- a/SacramentPlannerMVC/Views/Speakers/Index.cshtml
+++ b/SacramentPlannerMVC/Views/Speakers/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Subject)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Meeting.ClosingPrayer)
+                @Html.DisplayFor(modelItem => item.Meeting.Date)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
