--- a/SacramentPlannerMVC/Views/Meetings/Create.cshtml
+++ b/SacramentPlannerMVC/Views/Meetings/Create.cshtml
@@ -29,23 +29,33 @@
             </div>
             <div class="form-group">
                 <label asp-for="BishopricID" class="control-label"></label>
-                <select asp-for="BishopricID" class="form-control" asp-items="ViewBag.BishopricID"></select>
+                <select asp-for="BishopricID" class="form-control" asp-items="ViewBag.BishopricID">
+                    <option value="">-- Select Conductor --</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="OpeningHymnID" class="control-label"></label>
-                <select asp-for="OpeningHymnID" class="form-control" asp-items="ViewBag.OpeningHymnID"></select>
+                <select asp-for="OpeningHymnID" class="form-control" asp-items="ViewBag.OpeningHymnID">
+                    <option value="">-- Select Opening Hymn --</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="SacramentHymnID" class="control-label"></label>
-                <select asp-for="SacramentHymnID" class="form-control" asp-items="ViewBag.SacramentHymnID"></select>
+                <select asp-for="SacramentHymnID" class="form-control" asp-items="ViewBag.SacramentHymnID">
+                    <option value="">-- Select Sacrament Hymn --</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="IntermediateHymnID" class="control-label"></label>
-                <select asp-for="IntermediateHymnID" class="form-control" asp-items="ViewBag.IntermediateHymnID"></select>
+                <select asp-for="IntermediateHymnID" class="form-control" asp-items="ViewBag.IntermediateHymnID">
+                    <option value="">-- Select Intermediate Hymn --</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="ClosingHymnID" class="control-label"></label>
-                <select asp-for="ClosingHymnID" class="form-control" asp-items="ViewBag.ClosingHymnID"></select>
+                <select asp-for="ClosingHymnID" class="form-control" asp-items="ViewBag.ClosingHymnID">
+                    <option value="">-- Select Closing Hymn --</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
