--- a/SacramentPlannerMVC/Views/Speakers/Create.cshtml
+++ b/SacramentPlannerMVC/Views/Speakers/Create.cshtml
@@ -12,10 +12,10 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="MeetingID" class="control-label"></label>
-                <select asp-for="MeetingID" class ="form-control" asp-items="ViewBag.MeetingID"></select>
-            </div>
+
+            <input type="hidden" asp-for="MeetingID" class="form-control" value="@ViewData["MeetingID"]" />
+            @Html.HiddenFor(model => model.MeetingID)
+
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Meetings" asp-action="Index" asp-route-id="@ViewData["MeetingID"]">Back to List</a>
 </div>
 
 @section Scripts {
